--- a/html.html
+++ b/html.html
@@ -1,8 +1,11 @@
 <html>
-<head></head>
+<head>
+    <link ref="stylesheet" type="text/css" href="/styles.css">
+</head>
 <body>
     <h1>Placeholder</h1>
-    <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h2>
+    <h2>Lorem ipsum dolor sit amet   <br> consectetur adipisicing elit.</h2>
+ 
 </body>
 
 </html>
