--- a/html.html
+++ b/html.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <link ref="stylesheet" type="text/css" href="/styles.css">
+    <link rel="stylesheet" type="text/css" href="./styles.css"> 
 </head>
 <body>
     <h1>Placeholder</h1>
