--- a/html.html
+++ b/html.html
@@ -3,9 +3,11 @@
     <link rel="stylesheet" type="text/css" href="./styles.css"> 
 </head>
 <body>
+    
+    <img src="./images/83947151_178383343437280_2984026509984923648_n.jpg" alt="Broken">
     <h1>Placeholder</h1>
     <h2>Lorem ipsum dolor sit amet   <br> consectetur adipisicing elit.</h2>
  
 </body>
-
+<script type="text/javascript" src="script.js"></script>
 </html>
