update html & CSS

--- a/html.html
+++ b/html.html
@@ -1,13 +1,27 @@
 <html>
+
 <head>
-    <link rel="stylesheet" type="text/css" href="./styles.css"> 
+    <link rel="stylesheet" type="text/css" href="./styles.css">
 </head>
+
 <body>
-    
-    <img src="./images/83947151_178383343437280_2984026509984923648_n.jpg" alt="Broken">
-    <h1>Placeholder</h1>
-    <h2>Lorem ipsum dolor sit amet   <br> consectetur adipisicing elit.</h2>
- 
+    <img class="imgone" src="./images/83947151_178383343437280_2984026509984923648_n.jpg" alt="Broken">
+
+    <div class="textone">
+        <h1>Placeholder</h1>
+        <h2>Lorem ipsum dolor sit amet <br> consectetur adipisicing elit.</h2>
+    </div>
+
+    <div class="certone">
+        <img class="certone" scr="./Placeholder" alt="Placeholder/certone">
+    </div>
+
+    <div class="certtwo">
+        <img class="certone" scr="./Placeholder" alt="Placeholder/certtwo">
+    </div>
+
 </body>
+
 <script type="text/javascript" src="script.js"></script>
+
 </html>
